# llm-code-docs

./: .gitignore  .push-test  ADDING_TO_LLM_DOCS.md  ADVANCED_TESTING_IMPLEMENTATION_CHECKLIST.md  ADVANCED_TESTING_INDEX.md  ADVANCED_TESTING_METHODOLOGIES.md  ADVANCED_TESTING_QUICK_REFERENCE.md  ADVANCED_TESTING_TOOLS_CATALOG.csv  AGENTS.md  API_INTEGRATION_TESTING_INDEX.md  API_INTEGRATION_TESTING_TOOLS.md  API_INTEGRATION_TESTING_TOOLS_CATALOG.csv  APPLICATION_CONFIGURATION_FRAMEWORKS.csv  APPLICATION_CONFIGURATION_FRAMEWORKS.md  APPLICATION_CONFIGURATION_INDEX.md  APPLICATION_CONFIGURATION_SUMMARY.txt  AUDIO_PRODUCTION_DEVELOPER_TOOLS.md  AUDIO_PRODUCTION_INDEX.md  AUDIO_PRODUCTION_RESEARCH_OVERVIEW.txt  AUDIO_PRODUCTION_SUMMARY.md  AUDIO_PRODUCTION_TOOLS_CATALOG.csv  BROWSER_MOCKING_NETWORK_MOCKING_TOOLS.md  BUILD_TOOLS_COVERAGE.md  CACHING_ARCHITECTURE_PATTERNS.md  CACHING_INFRASTRUCTURE_RESEARCH.md  CACHING_LIBRARIES_RESEARCH.md  CACHING_QUICK_REFERENCE.csv  CACHING_QUICK_REFERENCE.md  CACHING_RESEARCH_COMPLETE.txt  CACHING_RESEARCH_INDEX.md  CACHING_SOFTWARE_CATALOG.csv  CACHING_SOFTWARE_QUICK_LIST.md  CACHING_SOFTWARE_RESEARCH.md  CACHING_SOLUTIONS_COMPREHENSIVE.md  CLAUDE.md  CLOUD_FEATURE_FLAG_INFRASTRUCTURE_DECISION_MATRIX.md  CLOUD_FEATURE_FLAG_INFRASTRUCTURE_INDEX.md  CLOUD_FEATURE_FLAG_INFRASTRUCTURE_QUICK_REFERENCE.csv  CLOUD_FEATURE_FLAG_INFRASTRUCTURE_SERVICES.md  CLOUD_GRAPH_DATABASES_2026.md  (+221 more)
api/: __init__.py  cli.py  main.py
augment-code/: augment-code-full.md  autoupgrade.md  chat-actions.md  chat-apply.md  chat-prompts.md  chat.md  feedback.md  (+10 more)
(+227353 files in other folders)
